--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -20255,7 +20255,7 @@ h3.title-big {
 
 /* footer section */
 footer.w3l-footer-29-main {
-  background: #09131d;
+  background: #46b7de;
 }
 
 .w3l-footer-29-main h6.footer-title-29 {
@@ -20279,8 +20279,7 @@ footer.w3l-footer-29-main {
 .w3l-footer-29-main .footer-list-29 p a,
 .w3l-footer-29-main .footer-list-29 p {
   font-size: 15px;
-  color: #ababab;
-  border-bottom: 1px solid rgb(255 255 255 / 22%);
+  color: #fff;
   padding-bottom: 4px;
 }
 
@@ -20290,7 +20289,7 @@ footer.w3l-footer-29-main {
 
 .w3l-footer-29-main .footer-list-29 ul li a:hover,
 .w3l-footer-29-main .footer-list-29 p a:hover {
-  color: #fff;
+  color: black;
 }
 
 .w3l-footer-29-main .footer-list-29 ul li:last-child a,
