--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -11779,7 +11779,7 @@ fieldset:disabled .btn {
     rgb(26 41 128 / 78%),
     rgb(46 234 232 / 59%)
   );
-  --gradient-color: linear-gradient(to right, #1a2980, #26d0ce);
+  --gradient-color: linear-gradient(to right, #46b7de, #46b7de);
 }
 
 [data-theme="dark"] {
@@ -11867,7 +11867,65 @@ button:hover {
 .d-grid {
   display: grid;
 }
+#ftco-loader {
+  position: fixed;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
 
+  z-index: 10000;
+}
+
+#ftco-loader.fullscreen {
+  padding: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: none;
+  -ms-transform: none;
+  transform: none;
+  background-color: #fff;
+  border-radius: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+#ftco-loader.show {
+  -webkit-transition: opacity 0.4s ease-out, visibility 0s linear 0s;
+  -o-transition: opacity 0.4s ease-out, visibility 0s linear 0s;
+  transition: opacity 0.4s ease-out, visibility 0s linear 0s;
+  visibility: visible;
+  opacity: 1;
+}
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 15px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  animation: l5 1s infinite linear alternate;
+}
+@keyframes l5 {
+  0% {
+    box-shadow: 20px 0 #46b7de, -20px 0 #0002;
+    background: #46b7de;
+  }
+  33% {
+    box-shadow: 20px 0 #46b7de, -20px 0 #0002;
+    background: #0002;
+  }
+  66% {
+    box-shadow: 20px 0 #0002, -20px 0 #46b7de;
+    background: #0002;
+  }
+  100% {
+    box-shadow: 20px 0 #0002, -20px 0 #46b7de;
+    background: #46b7de;
+  }
+}
 button,
 input,
 select,
@@ -18910,7 +18968,43 @@ header {
   align-items: center;
   /* box-shadow: 0 3px 9px rgba(0, 0, 0, 0.05); */
 }
+.nav-item.drop-down {
+  position: relative;
+}
 
+.nav-item.drop-down .drop-items {
+  position: absolute;
+  padding: 0;
+  margin-top: 1px;
+  left: 20%;
+  background-color: var(--primary-color);
+  display: none;
+  width: 250px;
+  box-shadow: 1px 1px 2px black;
+}
+
+.nav-item.drop-down .drop-items li {
+  padding: 10px 20px;
+  border-bottom: 1px solid white;
+}
+
+.nav-item.drop-down .drop-items li a {
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.nav-item.drop-down .drop-items li:hover {
+  background-color: white;
+}
+
+.nav-item.drop-down .drop-items li:hover a {
+  color: var(--drop-color);
+}
+
+.nav-item.drop-down:hover .drop-items {
+  display: block;
+}
 header.nav-fixed {
   padding: 0;
   background-color: var(--bg-color);
@@ -18918,7 +19012,6 @@ header.nav-fixed {
   border-bottom: none;
   box-shadow: 1px 2px 2px black;
   z-index: 10 !important;
-  /* for z-index:10 to display gallery popup */
 }
 
 .dropdown-toggle::after {
@@ -20192,6 +20285,7 @@ button.owl-next {
 /* call section */
 .w3l-call-to-action-6 {
   background: var(--gradient-color);
+  border-bottom: 1px solid white;
 }
 
 h3.title-big {
@@ -21016,7 +21110,7 @@ h4.service-heading {
   padding: 12px;
   -webkit-appearance: none;
   background: var(--bg-light);
-  border: 1px solid var(--border-color-light);
+  border: 1px solid grey;
   border-radius: 4px;
 }
 
