--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -680,7 +680,7 @@ progress {
   .container-md,
   .container-sm,
   .container {
-    max-width: 1140px;
+    max-width: 100vw;
   }
 }
 
@@ -691,7 +691,7 @@ progress {
   .container-md,
   .container-sm,
   .container {
-    max-width: 1320px;
+    max-width: 100vw;
   }
 }
 
@@ -12007,7 +12007,9 @@ li {
 
 @media (min-width: 1200px) {
   .container {
-    max-width: 1140px;
+    max-width: 100vw;
+    padding-left: 2rem;
+    padding-right: 2rem;
     margin-right: auto;
     margin-left: auto;
   }
@@ -12015,7 +12017,7 @@ li {
 
 @media (min-width: 1280px) {
   .container {
-    max-width: 1200px;
+    max-width: 100vw;
   }
 }
 
