--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -19435,7 +19435,24 @@ p.sub-title {
   min-height: 100vh;
   z-index: 0;
 }
-
+@media(max-width:992px){
+  #demo-1 {
+    background: url(../images/mobile.jpg) no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -ms-background-size: cover;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    min-height: 800px;
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
+    z-index: 0;
+  }
+}
 #demo-1:before {
   content: "";
   background: rgb(0 0 0 / 25%);
